--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "joi-browser": "13.4",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.2",
     "react": "^17.0.2",
