--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shashanknayak12.github.io/Vidly-movielist",
+  "homepage": "https://shashanknayak12.github.io/",
   "name": "vidly",
   "version": "0.1.0",
   "private": true,
