--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "homepage": "https://shashanknayak12.github.io/",
+  "homepage": "https://shashanknayak12.github.io/Vidly-movielist",
   "name": "vidly",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "fontawesome": "^5.6.3",
     "joi-browser": "13.4",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.2",
